--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     
     <title>Nupoor Joshi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -135,4 +136,5 @@
 
 
 </body>
+
 </html>
